Change <i> to <em>

--- a/first.html
+++ b/first.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>My first HTML document</h1>
-Hello, <i>World Wide Web!</i>
+Hello, <em>World Wide Web!</em>
 <hr>
 <!-- No "HEllo, World" for us -->
 <p>Greetings from<br>
