--- a/first.html
+++ b/first.html
@@ -19,5 +19,9 @@ Copyright &copy; 2000 and beyond
 <br>
 <pre>This text will show up the way I typed
 Even the line break will be shown</pre>
+  <ul>
+    <li>Friends!</li>
+    <li>Are Great</li>
+  </ul>
 </body>
 </html>
